Adding GEA3 and A5/3 ECSD wrappers.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(test_liba5 test_library.cpp test_kasumi.cpp test_kgcore.cpp test_a53gsm.cpp)
+add_executable(test_liba5 test_library.cpp test_kasumi.cpp test_kgcore.cpp test_a53gsm.cpp test_gea3.cpp test_a53ecsd.cpp)
 target_link_libraries(test_liba5 liba5)
