--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(include)
 
-add_library(liba5 library.cpp kasumi.cpp kasumi.h a53gsm.cpp a53gsm.h kgcore.cpp kgcore.h gea3.cpp gea3.h a53ecsd.cpp a53ecsd.h a54gsm.cpp a54gsm.h a54ecsd.cpp a54ecsd.h gea4.cpp gea4.h)
+add_library(liba5 library.cpp kasumi.cpp kasumi.h a53gsm.cpp a53gsm.h kgcore.cpp kgcore.h gea3.cpp gea3.h a53ecsd.cpp a53ecsd.h a54gsm.cpp a54gsm.h a54ecsd.cpp a54ecsd.h gea4.cpp gea4.h milenage.cpp milenage.h rijndael.cpp rijndael.h utilities.cpp utilities.h)
 
 add_subdirectory(tests)
