A bit more work.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,24 @@ project(liba5)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(spdlog)
-
-add_library(liba5 src/library.cpp src/kasumi.cpp src/kasumi.h src/a53gsm.cpp src/a53gsm.h src/kgcore.cpp src/kgcore.h src/gea3.cpp src/gea3.h src/a53ecsd.cpp src/a53ecsd.h src/a54gsm.cpp src/a54gsm.h src/a54ecsd.cpp src/a54ecsd.h src/gea4.cpp src/gea4.h src/milenage.cpp src/milenage.h src/rijndael.cpp src/rijndael.h src/utilities.cpp src/utilities.h)
-
-target_link_libraries(liba5 spdlog::spdlog)
+add_subdirectory(src)
+#find_package(spdlog)
+#
+#add_library(liba5
+#        src/library.cpp
+#        src/kasumi.cpp
+#        src/a53gsm.cpp
+#        src/kgcore.cpp
+#        src/gea3.cpp
+#        src/a53ecsd.cpp
+#        src/a54gsm.cpp
+#        src/a54ecsd.cpp
+#        src/gea4.cpp
+#        src/milenage.cpp
+#        src/rijndael.cpp
+#        src/utilities.cpp
+#)
+#
+#target_link_libraries(liba5 spdlog::spdlog)
 
 add_subdirectory(tests)
